force-app/main/default/objects/ANZARD_Data__c/ANZARD_Data__c.object-meta.xml
<CustomObject>
    <label>ANZARD Data</label>
    <nameField>
        <displayFormat>ANZ - {000000}</displayFormat>
        <label>ANZARD Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANZARD Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>