force-app/main/default/objects/ANZARD_Data__c/fields/ANZARD_UNIT__c.field-meta.xml
<CustomField>
    <fullName>ANZARD_UNIT__c</fullName>
    <formula>CYCLE_ID__r.Clinic_Cycle_Being_Undertaken_At__r.ANZARD_Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ANZARD_UNIT</label>
    <type>Text</type>
</CustomField>