force-app/main/default/objects/ANZARD_Data__c/fields/ART_REASON__c.field-meta.xml
<CustomField>
    <fullName>ART_REASON__c</fullName>
    <formula>IF( PARENT_SEX__c  &lt;&gt; &quot;1&quot;, NULL, 
IF( FERT_PRES__c = &quot;2&quot;,&quot;y&quot;,&quot;n&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ART_REASON</label>
    <type>Text</type>
</CustomField>