force-app/main/default/objects/ANZARD_Data__c/fields/ART_UNIT__c.field-meta.xml
<CustomField>
    <fullName>ART_UNIT__c</fullName>
    <formula>CYCLE_ID__r.Clinic_Cycle_Being_Undertaken_At__r.RTAC_Accredited_Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ART_UNIT</label>
    <type>Text</type>
</CustomField>