force-app/main/default/objects/ANZARD_Data__c/fields/ASS_HATC__c.field-meta.xml
<CustomField>
    <fullName>ASS_HATC__c</fullName>
    <defaultValue>&quot;n&quot;</defaultValue>
    <label>ASS_HATC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>