force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB1_ABN__c</fullName>
    <description>Abnormalities in first-born baby.</description>
    <formula>CYCLE_ID__r.Abnormalities_in_First_Born_Baby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB1_ABN</label>
    <type>Text</type>
</CustomField>