force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB1_NND__c</fullName>
    <description>Date of neonatal death of first-born baby.</description>
    <formula>CYCLE_ID__r.First_Born_Date_of_Neonatal_Death__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB1_NND</label>
    <type>Date</type>
</CustomField>