force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_OUT__c.field-meta.xml
<CustomField>
    <fullName>BAB1_OUT__c</fullName>
    <formula>LEFT(TEXT( CYCLE_ID__r.Outcome_of_First_Born_Baby__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB1_OUT</label>
    <type>Text</type>
</CustomField>