force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_SEX__c.field-meta.xml
<CustomField>
    <fullName>BAB1_SEX__c</fullName>
    <formula>LEFT(TEXT( CYCLE_ID__r.Sex_of_First_Born_Baby__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB1_SEX</label>
    <type>Text</type>
</CustomField>