force-app/main/default/objects/ANZARD_Data__c/fields/BAB1_WT__c.field-meta.xml
<CustomField>
    <fullName>BAB1_WT__c</fullName>
    <formula>CYCLE_ID__r.Birthweight_of_First_Born_Baby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB1_WT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>