force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB2_ABN__c</fullName>
    <formula>CYCLE_ID__r.Abnormalities_in_Second_Born_Baby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB2_ABN</label>
    <type>Text</type>
</CustomField>