force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB2_NND__c</fullName>
    <description>Date of neonatal death of Second-born baby.</description>
    <formula>CYCLE_ID__r.Second_Born_Date_of_Neonatal_Death__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB2_NND</label>
    <type>Date</type>
</CustomField>