force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_OUT__c.field-meta.xml
<CustomField>
    <fullName>BAB2_OUT__c</fullName>
    <description>Outcome of second-born baby.</description>
    <formula>LEFT(TEXT(  CYCLE_ID__r.Outcome_of_Second_Born_Baby__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB2_OUT</label>
    <type>Text</type>
</CustomField>