force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_SEX__c.field-meta.xml
<CustomField>
    <fullName>BAB2_SEX__c</fullName>
    <description>Sex of second-born baby.</description>
    <formula>LEFT(TEXT(  CYCLE_ID__r.Sex_of_Second_Born_Baby__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB2_SEX</label>
    <type>Text</type>
</CustomField>