force-app/main/default/objects/ANZARD_Data__c/fields/BAB2_WT__c.field-meta.xml
<CustomField>
    <fullName>BAB2_WT__c</fullName>
    <description>Weight of second-born baby.</description>
    <formula>CYCLE_ID__r.Birthweight_of_Second_Born_Baby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB2_WT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>