force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB3_ABN__c</fullName>
    <description>Abnormalities in third-born baby.</description>
    <formula>CYCLE_ID__r.Abnormalities_in_Third_Born_Baby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB3_ABN</label>
    <type>Text</type>
</CustomField>