force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB3_NND__c</fullName>
    <description>Date of neonatal death of Third-born baby.</description>
    <formula>CYCLE_ID__r.Third_Born_Date_of_Neonatal_Death__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB3_NND</label>
    <type>Date</type>
</CustomField>