force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_OUT__c.field-meta.xml
<CustomField>
    <fullName>BAB3_OUT__c</fullName>
    <description>Outcome of third-born baby.</description>
    <formula>LEFT(TEXT( CYCLE_ID__r.Outcome_of_Third_Born_Baby__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB3_OUT</label>
    <type>Text</type>
</CustomField>