force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_SEX__c.field-meta.xml
<CustomField>
    <fullName>BAB3_SEX__c</fullName>
    <description>Sex of third-born baby.</description>
    <formula>LEFT(TEXT(  CYCLE_ID__r.Sex_of_Third_Baby__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB3_SEX</label>
    <type>Text</type>
</CustomField>