force-app/main/default/objects/ANZARD_Data__c/fields/BAB3_WT__c.field-meta.xml
<CustomField>
    <fullName>BAB3_WT__c</fullName>
    <description>Weight of third-born baby.</description>
    <formula>CYCLE_ID__r.Birthweight_of_Third_Born_Baby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAB3_WT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>