force-app/main/default/objects/ANZARD_Data__c/fields/CAN_DATE__c.field-meta.xml
<CustomField>
    <fullName>CAN_DATE__c</fullName>
    <formula>CYCLE_ID__r.Cycle_Cancelled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAN_DATE</label>
    <type>Date</type>
</CustomField>