force-app/main/default/objects/ANZARD_Data__c/fields/CI_TUBE__c.field-meta.xml
<CustomField>
    <fullName>CI_TUBE__c</fullName>
    <formula>IF(PARENT_SEX__c = &quot;2&quot; || PARENT_SEX__c = &quot;3&quot;, NULL,
IF(PARENT_SEX__c = &quot;1&quot; &amp;&amp; CYCLE_TYPE__c = &quot;8&quot;, NULL,
IF(ART_REASON__c = &quot;y&quot;, &quot;n&quot;,
IF(ISBLANK(LEFT(TEXT(CYCLE_ID__r.Patient__r.Is_Infertility_due_to_Tubal_Disease__c ), 1)), &quot;u&quot;, LEFT(TEXT(CYCLE_ID__r.Patient__r.Is_Infertility_due_to_Tubal_Disease__c), 1)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CI_TUBE</label>
    <type>Text</type>
</CustomField>