force-app/main/default/objects/ANZARD_Data__c/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <description>Caesarean birth.</description>
    <label>CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>