force-app/main/default/objects/ANZARD_Data__c/fields/CYCLE_ID__c.field-meta.xml
<CustomField>
    <fullName>CYCLE_ID__c</fullName>
    <label>CYCLE_ID</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>ANZARD Data</relationshipLabel>
    <relationshipName>ANZARD_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>