force-app/main/default/objects/ANZARD_Data__c/fields/DATE_ET__c.field-meta.xml
<CustomField>
    <fullName>DATE_ET__c</fullName>
    <formula>CYCLE_ID__r.Date_of_Embryo_Transfer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ET_DATE</label>
    <type>Date</type>
</CustomField>