force-app/main/default/objects/ANZARD_Data__c/fields/DATE_TTC__c.field-meta.xml
<CustomField>
    <fullName>DATE_TTC__c</fullName>
    <formula>IF( PARENT_SEX__c = &quot;1&quot; &amp;&amp;  CYCLE_TYPE__c = &quot;1&quot; &amp;&amp;  STIM_1ST__c = &quot;y&quot; , DATE(YEAR(CYCLE_ID__r.Patient__r.Date_started_trying_to_conceive__c ),MONTH(CYCLE_ID__r.Patient__r.Date_started_trying_to_conceive__c ),1) ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATE_TTC</label>
    <type>Date</type>
</CustomField>