force-app/main/default/objects/ANZARD_Data__c/fields/EMB_ICSI__c.field-meta.xml
<CustomField>
    <fullName>EMB_ICSI__c</fullName>
    <label>EMB_ICSI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>