force-app/main/default/objects/ANZARD_Data__c/fields/FDAT_EGG__c.field-meta.xml
<CustomField>
    <fullName>FDAT_EGG__c</fullName>
    <formula>CYCLE_ID__r.Initial_Cyro_Date_of_Thawed_Eggs__c</formula>
    <label>FDAT_EGG</label>
    <type>Date</type>
</CustomField>