force-app/main/default/objects/ANZARD_Data__c/fields/FDAT_EMB__c.field-meta.xml
<CustomField>
    <fullName>FDAT_EMB__c</fullName>
    <label>FDAT_EMB</label>
    <type>Date</type>
</CustomField>