force-app/main/default/objects/ANZARD_Data__c/fields/FERT_PRES__c.field-meta.xml
<CustomField>
    <fullName>FERT_PRES__c</fullName>
    <formula>IF( CYCLE_TYPE__c = &quot;8&quot;, NULL, LEFT( TEXT(CYCLE_ID__r.Is_Cycle_for_Fertility_Preservation__c) , 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FERT_PRES</label>
    <type>Text</type>
</CustomField>