force-app/main/default/objects/ANZARD_Data__c/fields/FNAM_FST2__c.field-meta.xml
<CustomField>
    <fullName>FNAM_FST2__c</fullName>
    <formula>LEFT ( CYCLE_ID__r.Patient__r.FirstName, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FNAM_FST2</label>
    <type>Text</type>
</CustomField>