force-app/main/default/objects/ANZARD_Data__c/fields/FNAM_SUR2__c.field-meta.xml
<CustomField>
    <fullName>FNAM_SUR2__c</fullName>
    <formula>LEFT ( CYCLE_ID__r.Patient__r.LastName, 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FNAM_SUR2</label>
    <type>Text</type>
</CustomField>