force-app/main/default/objects/ANZARD_Data__c/fields/FP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FP_TYPE__c</fullName>
    <formula>LEFT( TEXT(CYCLE_ID__r.Fertility_Preservation_Typpe__c) ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FP_TYPE</label>
    <type>Text</type>
</CustomField>