force-app/main/default/objects/ANZARD_Data__c/fields/HEIGHT_F__c.field-meta.xml
<CustomField>
    <fullName>HEIGHT_F__c</fullName>
    <formula>TEXT( CYCLE_ID__r.Patient__r.Height__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HEIGHT_F</label>
    <type>Text</type>
</CustomField>