force-app/main/default/objects/ANZARD_Data__c/fields/IUI_DATE__c.field-meta.xml
<CustomField>
    <fullName>IUI_DATE__c</fullName>
    <label>IUI_DATE</label>
    <type>Date</type>
</CustomField>