force-app/main/default/objects/ANZARD_Data__c/fields/IVM__c.field-meta.xml
<CustomField>
    <fullName>IVM__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>