force-app/main/default/objects/ANZARD_Data__c/fields/MALE_DIAG__c.field-meta.xml
<CustomField>
    <fullName>MALE_DIAG__c</fullName>
    <formula>LEFT(TEXT( CYCLE_ID__r.Patient__r.Primary_Cause_of_Infertility_Diagnosis__c ),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MALE_DIAG</label>
    <type>Text</type>
</CustomField>