force-app/main/default/objects/ANZARD_Data__c/fields/MDOB_1__c.field-meta.xml
<CustomField>
    <fullName>MDOB_1__c</fullName>
    <formula>IF( PARENT_SEX__c = &quot;1&quot;, CYCLE_ID__r.Patient__r.Partner__r.Birthdate,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDOB_1</label>
    <type>Date</type>
</CustomField>