force-app/main/default/objects/ANZARD_Data__c/fields/MDOB_2__c.field-meta.xml
<CustomField>
    <fullName>MDOB_2__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDOB_2</label>
    <type>Date</type>
</CustomField>