force-app/main/default/objects/ANZARD_Data__c/fields/MNAM_FST2__c.field-meta.xml
<CustomField>
    <fullName>MNAM_FST2__c</fullName>
    <formula>IF(PARENT_SEX__c = &quot;1&quot;, LEFT(CYCLE_ID__r.Patient__r.Partner__r.FirstName, 2), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MNAM_FST2</label>
    <type>Text</type>
</CustomField>