force-app/main/default/objects/ANZARD_Data__c/fields/MNAM_SUR2__c.field-meta.xml
<CustomField>
    <fullName>MNAM_SUR2__c</fullName>
    <formula>IF( PARENT_SEX__c = &quot;1&quot;, LEFT(CYCLE_ID__r.Patient__r.Partner__r.LastName , 2),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MNAM_SUR2</label>
    <type>Text</type>
</CustomField>