force-app/main/default/objects/ANZARD_Data__c/fields/N_BLFZ_S__c.field-meta.xml
<CustomField>
    <fullName>N_BLFZ_S__c</fullName>
    <formula>CYCLE_ID__r.Number_of_Blasts_Slow_Frozen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_BLFZ_S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>