force-app/main/default/objects/ANZARD_Data__c/fields/N_DELIV__c.field-meta.xml
<CustomField>
    <fullName>N_DELIV__c</fullName>
    <description>Number of babies born</description>
    <label>N_DELIV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>