force-app/main/default/objects/ANZARD_Data__c/fields/N_EGGDON_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EGGDON_FRESH__c</fullName>
    <formula>IF(
    AND(
        OR( CYCLE_TYPE__c  = &quot;2&quot;, CYCLE_TYPE__c = &quot;3&quot;, CYCLE_TYPE__c = &quot;6&quot;),
        OR(PARENT_SEX__c = &quot;1&quot;, PARENT_SEX__c = &quot;3&quot;)
    ),
     CYCLE_ID__r.Total_Eggs_Collected__c ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_EGGDON_FRESH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>