force-app/main/default/objects/ANZARD_Data__c/fields/N_EMBREC_FRESH__c.field-meta.xml
<CustomField>
    <fullName>N_EMBREC_FRESH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>N_EMBREC_FRESH</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>