force-app/main/default/objects/ANZARD_Data__c/fields/N_FERT__c.field-meta.xml
<CustomField>
    <fullName>N_FERT__c</fullName>
    <formula>CYCLE_ID__r.Total_Number_of_Eggs_Fertilised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_FERT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>