force-app/main/default/objects/ANZARD_Data__c/fields/N_FH__c.field-meta.xml
<CustomField>
    <fullName>N_FH__c</fullName>
    <formula>TEXT(CYCLE_ID__r.Number_of_Foetal_Hearts__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_FH</label>
    <type>Text</type>
</CustomField>