force-app/main/default/objects/ANZARD_Data__c/fields/N_IVF__c.field-meta.xml
<CustomField>
    <fullName>N_IVF__c</fullName>
    <formula>CYCLE_ID__r.Total_Eggs_Treated_with_IVF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_IVF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>