force-app/main/default/objects/ANZARD_Data__c/fields/N_PGT_ET__c.field-meta.xml
<CustomField>
    <fullName>N_PGT_ET__c</fullName>
    <label>N_PGT_ET</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>