force-app/main/default/objects/ANZARD_Data__c/fields/N_S_BLTH__c.field-meta.xml
<CustomField>
    <fullName>N_S_BLTH__c</fullName>
    <formula>CYCLE_ID__r.Total_Number_of_Slow_Blast_Embs_Thawed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_S_BLTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>