force-app/main/default/objects/ANZARD_Data__c/fields/N_S_EGTH__c.field-meta.xml
<CustomField>
    <fullName>N_S_EGTH__c</fullName>
    <formula>CYCLE_ID__r.Tota_Number_of_Slow_Frozen_Eggs_Thawed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_S_EGTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>