force-app/main/default/objects/ANZARD_Data__c/fields/N_V_CLTH__c.field-meta.xml
<CustomField>
    <fullName>N_V_CLTH__c</fullName>
    <formula>CYCLE_ID__r.Total_Number_of_Vitrified_CS_Embs_Thawed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_V_CLTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>