force-app/main/default/objects/ANZARD_Data__c/fields/N_V_EGTH__c.field-meta.xml
<CustomField>
    <fullName>N_V_EGTH__c</fullName>
    <formula>CYCLE_ID__r.Total_number_of_Vitrified_Eggs_Thawed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_V_EGTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>