force-app/main/default/objects/ANZARD_Data__c/fields/NI_PGT_ET__c.field-meta.xml
<CustomField>
    <fullName>NI_PGT_ET__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NI_PGT_ET</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>