force-app/main/default/objects/ANZARD_Data__c/fields/OPU_DATE__c.field-meta.xml
<CustomField>
    <fullName>OPU_DATE__c</fullName>
    <formula>DATEVALUE( CYCLE_ID__r.OPU_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPU_DATE</label>
    <type>Date</type>
</CustomField>