force-app/main/default/objects/ANZARD_Data__c/fields/OV_STIM__c.field-meta.xml
<CustomField>
    <fullName>OV_STIM__c</fullName>
    <formula>CYCLE_ID__r.FSH_Y_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OV_STIM</label>
    <type>Text</type>
</CustomField>