force-app/main/default/objects/ANZARD_Data__c/fields/PAT_ID__c.field-meta.xml
<CustomField>
    <fullName>PAT_ID__c</fullName>
    <formula>CYCLE_ID__r.Patient__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAT_ID</label>
    <type>Text</type>
</CustomField>