force-app/main/default/objects/ANZARD_Data__c/fields/PCOS__c.field-meta.xml
<CustomField>
    <fullName>PCOS__c</fullName>
    <formula>IF (PARENT_SEX__c &lt;&gt; &quot;1&quot;|| CYCLE_TYPE__c =&quot;8&quot;, NULL, 
IF ( TEXT(CYCLE_ID__r.Patient__r.Is_PCOS_Present__c) = NULL, &quot;u&quot;, LEFT (TEXT( CYCLE_ID__r.Patient__r.Is_Infertility_due_to_Tubal_Disease__c ), 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCOS</label>
    <type>Text</type>
</CustomField>