force-app/main/default/objects/ANZARD_Data__c/fields/PGT_REASON__c.field-meta.xml
<CustomField>
    <fullName>PGT_REASON__c</fullName>
    <formula>LEFT( TEXT(CYCLE_ID__r.PGT_A_Reason__c) ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGT_REASON</label>
    <type>Text</type>
</CustomField>