force-app/main/default/objects/ANZARD_Data__c/fields/PR_ECTOP__c.field-meta.xml
<CustomField>
    <fullName>PR_ECTOP__c</fullName>
    <formula>IF( TEXT(CYCLE_ID__r.Pregnancy_Outcome__c) =&quot;Ectopic&quot;,&quot;e&quot;, 
IF(TEXT(CYCLE_ID__r.Pregnancy_Outcome__c) = &quot;Heterotopic&quot;, &quot;h&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR_ECTOP</label>
    <type>Text</type>
</CustomField>